tests/baselines/reference/topLevelLambda.errors.txt
==== tests/cases/compiler/topLevelLambda.ts (1 errors) ====
    module M {
    	var f = () => {this.window;}
    	               ~~~~
!!! error TS2331: 'this' cannot be referenced in a module body.
    }
    